[package]
name = "derive_builder"
version = "0.0.0"
edition = "2018"
autotests = false
publish = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = "1.0"

[dependencies]
quote = "1.0.2"
syn = "1.0.5"
proc-macro2 = "1.0.4"
failure = "0.1.5"
